Fix overflow in 'my projects' list

--- a/app/assets/stylesheets/sections/projects.scss
+++ b/app/assets/stylesheets/sections/projects.scss
@@ -159,6 +159,7 @@ ul.nav.nav-projects-tabs {
   li {
     .project-info {
       margin-bottom: 10px;
+      overflow: hidden;
     }
 
     .access-icon {
